syntax = "proto3";

package pactissue;

service ExampleService {
  rpc GetSample (ExampleRequest) returns (ExampleResponse) {};
}

message ExampleRequest {
  map<string, ExampleValue> values = 1;
  bool ok = 2;
}

message ExampleValue {
  string value = 1;
}

message ExampleResponse {
  bool ok = 1;
}
